--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -34,12 +34,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="content less-left-margin">
-                                <input type="checkbox" name="optionsCheckboxes">
-                                <div class="checkbox-label">
-                                    <label class="checkbox-label">Short URL</label>
-                                </div>
-                            </div>
+                            <label class="checkbox" for="optionsCheckboxes">
+                                <span class="icons"><span class="first-icon fa fa-square-o"></span>
+                                    <span class="second-icon fa fa-check-square-o"></span></span>
+                                <input type="checkbox" name="optionsCheckboxes" id="optionsCheckboxes">
+                                Short URL
+                            </label>
+{#                            <div class="content less-left-margin">#}
+{#                                <input type="checkbox" name="optionsCheckboxes">#}
+{#                                <div class="checkbox-label">#}
+{#                                    <label class="checkbox-label">Short URL</label>#}
+{#                                </div>#}
+{#                            </div>#}
                             <div id="redirects-save" class="btn
                             btn-primary">Save
                             </div>
