--- a/tinker/e_announcements/templates/confirm.html
+++ b/tinker/e_announcements/templates/confirm.html
@@ -7,7 +7,7 @@
     <div class="content">
         <div class="container-fluid">
             <div class="col-md-12">
-                <h3>Congrats!</h3>
+                <h3 class="first-subtitle">Congrats!</h3>
                 {% if status == 'new' %}
                     <input type="hidden" id="new_eaid" value="{{ new_eaid }}"/>
                     <p>
