--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -1,3 +1,20 @@
+@media (min-width: 992px) {
+    .col-md-1,
+    .col-md-10,
+    .col-md-11,
+    .col-md-12,
+    .col-md-2,
+    .col-md-3,
+    .col-md-4,
+    .col-md-5,
+    .col-md-6,
+    .col-md-7,
+    .col-md-8,
+    .col-md-9 {
+        float: None
+    }
+}
+
 .spinner {
     position: fixed;
     top: 50%;
@@ -44,23 +61,6 @@ h3 {
     border: 0;
 }
 
-@media (min-width: 992px) {
-    .col-md-1,
-    .col-md-10,
-    .col-md-11,
-    .col-md-12,
-    .col-md-2,
-    .col-md-3,
-    .col-md-4,
-    .col-md-5,
-    .col-md-6,
-    .col-md-7,
-    .col-md-8,
-    .col-md-9 {
-        float: None
-    }
-}
-
 .col-sm-4 {
     padding-bottom: 0px !important;
 }
@@ -90,10 +90,6 @@ ul.dropdown-menu {
     border-radius: 6px;
     margin-top: 8px;
     box-shadow: 0 2px rgba(17, 16, 15, 0.1), 0 2px 10px rgba(17, 16, 15, 0.1) !important;
-}
-
-a.more-info {
-    margin-bottom: 10px;
 }
 
 #more-info-title {
@@ -294,11 +290,11 @@ textarea {
     text-transform: none !important;
 }
 
-/* todo: come up with a way to generalize these tags */
+td {
+    padding: 3px 0px 3px 0px !important;
+}
 
-/*select#heading {*/
-/*margin-left: 15px;*/
-/*}*/
+/* todo: come up with a way to generalize these tags */
 
 div#cke_biography {
     margin: 0px 0px 10px 0px;
@@ -487,66 +483,70 @@ label {
 
 /* Checkbox inputs */
 
-input[type='checkbox'] {
-    -webkit-appearance: none;
-    background-color: #FFFFFF;
-    border: 2px solid #9A9A9A;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
-    padding: 2px;
-    border-radius: 3px;
-    display: inline-block;
-    position: relative;
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
-    float: left;
-    opacity: .5;
+label.checkbox {
+    margin-bottom: 8px!important;
 }
 
-input[type='checkbox']:active, input[type='checkbox']:checked:active {
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    opacity: 1;
-}
+/*input[type='checkbox'] {*/
+    /*-webkit-appearance: none;*/
+    /*background-color: #FFFFFF;*/
+    /*border: 2px solid #9A9A9A;*/
+    /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);*/
+    /*padding: 2px;*/
+    /*border-radius: 3px;*/
+    /*display: inline-block;*/
+    /*position: relative;*/
+    /*width: 16px;*/
+    /*height: 16px;*/
+    /*cursor: pointer;*/
+    /*float: left;*/
+    /*opacity: .5;*/
+/*}*/
 
-input[type='checkbox']:checked {
-    background-color: #FFFFFF;
-    border: 2px solid #66615b;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
-    inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05),
-    inset 15px 10px -12px rgba(255, 255, 255, 0.1);
-    color: #66615b;
-    cursor: pointer;
-    opacity: 1;
-}
+/*input[type='checkbox']:active, input[type='checkbox']:checked:active {*/
+    /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);*/
+    /*cursor: pointer;*/
+    /*opacity: 1;*/
+/*}*/
 
-input[type='checkbox']:checked:after {
-    content: '\2713';
-    font-size: 19px;
-    position: absolute;
-    top: -5px;
-    left: -1px;
-    color: #66615b;
-}
+/*input[type='checkbox']:checked {*/
+    /*background-color: #FFFFFF;*/
+    /*border: 2px solid #66615b;*/
+    /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),*/
+    /*inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05),*/
+    /*inset 15px 10px -12px rgba(255, 255, 255, 0.1);*/
+    /*color: #66615b;*/
+    /*cursor: pointer;*/
+    /*opacity: 1;*/
+/*}*/
 
-input[type='checkbox']:hover:after {
-    content: '\2713';
-    font-size: 19px;
-    position: absolute;
-    top: -5px;
-    left: -1px;
-    color: #66615b;
-    border-color: #66615b
-}
+/*input[type='checkbox']:checked:after {*/
+    /*content: '\2713';*/
+    /*font-size: 19px;*/
+    /*position: absolute;*/
+    /*top: -5px;*/
+    /*left: -1px;*/
+    /*color: #66615b;*/
+/*}*/
 
-input[type='checkbox']:checked:hover:after {
-    content: '\2713';
-    font-size: 19px;
-    position: absolute;
-    top: -5px;
-    left: -1px;
-    color: #66615b;
-}
+/*input[type='checkbox']:hover:after {*/
+    /*content: '\2713';*/
+    /*font-size: 19px;*/
+    /*position: absolute;*/
+    /*top: -5px;*/
+    /*left: -1px;*/
+    /*color: #66615b;*/
+    /*border-color: #66615b*/
+/*}*/
+
+/*input[type='checkbox']:checked:hover:after {*/
+    /*content: '\2713';*/
+    /*font-size: 19px;*/
+    /*position: absolute;*/
+    /*top: -5px;*/
+    /*left: -1px;*/
+    /*color: #66615b;*/
+/*}*/
 
 /* Notifications */
 [data-notify="container"].alert {
