--- a/tinker/e_announcements/templates/form.html
+++ b/tinker/e_announcements/templates/form.html
@@ -37,12 +37,9 @@
 {% block main_content %}
     <div class="content">
         <div class="container-fluid row">
-            {% if new_form %}
-                <form id="eannouncementform" action="{{ url_for('e_announcements.EAnnouncementsView:submit') }}"
+            <form id="eannouncementform" action="{{ url_for('e_announcements.EAnnouncementsView:submit') }}"
                       method="post" enctype="multipart/form-data">
-            {% else %}
-                <form id="eannouncementform" action="{{ url_for('e_announcements.EAnnouncementsView:submit') }}"
-                      method="post" enctype="multipart/form-data">
+            {% if not new_form %}
                 <input type="hidden" name="e_announcement_id" id="e_announcement_id"
                        value="{{ e_announcement_id }}"/>
             {% endif %}
