Removed invalid github token
Also, changed it to be through config now, so that valid tokens aren’t
on git.

--- a/tinker/unit_test_interface/templates/travis.html
+++ b/tinker/unit_test_interface/templates/travis.html
@@ -16,7 +16,7 @@
             <option value="{{ branch }}">{{ branch }}</option>
             {% endfor %}
         </select>
-        <img id="indicator" src="https://travis-ci.org/betheluniversity/tinker.svg?branch=master"/>
+        <img id="indicator" src="https://travis-ci.org/betheluniversity/tinker.svg?branch={{ branches[0] }}"/>
         <hr/>
         <table id="builds">
             <thead>
