--- a/tinker/unit_test_interface/templates/travis.html
+++ b/tinker/unit_test_interface/templates/travis.html
@@ -16,17 +16,18 @@
             <option value="{{ branch }}">{{ branch }}</option>
             {% endfor %}
         </select>
-        <img id="indicator" src="https://travis-ci.org/betheluniversity/tinker.svg?branch={{ branches[0] }}"/>
+        <a href="https://travis-ci.org/betheluniversity/tinker/branches">
+            <img id="indicator" src="https://travis-ci.org/betheluniversity/tinker.svg?branch={{ branches[0] }}"/>
+        </a>
         <hr/>
         <table id="builds">
             <thead>
                 <tr>
-                    <th>build_id</th>
-                    <th>state</th>
-                    <th>duration</th>
-                    <th>branch</th>
-                    <th>commit</th>
-                    <th>author</th>
+                    <th>Build Id</th>
+                    <th>State</th>
+                    <th>Branch</th>
+                    <th>Author</th>
+                    <th>Date</th>
                 </tr>
             </thead>
             <tbody id="build_rows">
@@ -34,10 +35,9 @@
                 <tr>
                     <td><a href="/unit-test/view_travis_build/{{ packet['build_id'] }}">{{ packet['build_id'] }}</a></td>
                     <td>{{ packet['state'] }}</td>
-                    <td>{{ packet['duration'] }}</td>
-                    <td>{{ packet['branch'] }}</td>
-                    <td>{{ packet['commit'] }}</td>
+                    <td><a href="https://github.com/betheluniversity/tinker/commit/{{ packet['commit'] }}">{{ packet['branch'] }}</a></td>
                     <td>{{ packet['author'] }}</td>
+                    <td>{{ packet['date'] }}</td>
                 </tr>
             {% endfor %}
             </tbody>
