Added a link to quickly view Travis log of unit tests' results

--- a/tinker/unit_test_interface/templates/travis_build_view.html
+++ b/tinker/unit_test_interface/templates/travis_build_view.html
@@ -11,6 +11,8 @@
                 <td>{{ key }}</td>
             {% if key == "duration" %}
                 <td>{{ packet[key] }} seconds</td>
+            {% elif key == "build_id" %}
+                <td><a href="https://travis-ci.org/betheluniversity/tinker/builds/{{ packet[key] }}">{{ packet[key] }}</a></td>
             {% elif key == "compare_url" %}
                 <td><a href="{{ packet[key] }}">{{ packet[key] }}</a></td>
             {% else %}
