--- a/tinker/templates/creative_tim_base.html
+++ b/tinker/templates/creative_tim_base.html
@@ -10,7 +10,7 @@
         {% block head %}
             <meta charset="utf-8"/>
             <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/apple-icon.png">
-            <link rel="icon" type="image/png" sizes="96x96" href="/static/assets/img/favicon.png">
+            <link rel="icon" type="image/png" sizes="96x96" href="/static/assets/img/favicon.ico">
             <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
             <title>{% block title %}{{ title }}{% endblock %}</title>
