fixed 0 based indexing

--- a/tinker/events/templates/event-form.html
+++ b/tinker/events/templates/event-form.html
@@ -317,7 +317,7 @@
                 var return_value = true;
                 // reset all 'required' fields
                 $('.dates-required').remove();
-                for( i=0; i<dates.length;i++){
+                for( i=1; i<=dates.length;i++){
                     var start = $('#start' + i);
                     var end = $('#end' + i);
 
