--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -63,7 +63,7 @@
                                             <li><a href="{{ url_for('events.EventsView:duplicate', event_id=form.id) }}"
                                                    class="small btn btn-primary">Duplicate</a></li>
                                         {% else %}
-                                            <li>This announcement is pending approval.</li>
+                                            <li>This event is pending approval.</li>
                                         {% endif %}
                                     </ul>
                                 </div>
