events add default values if form is not valid

--- a/tinker/events/templates/event-form.html
+++ b/tinker/events/templates/event-form.html
@@ -312,6 +312,8 @@
                             $('#allday' + i).prop('checked', event_dates['allday' + i]);
                             $('#start' + i).val(event_dates['start' + i]);
                             $('#end' + i).val(event_dates['end' + i]);
+                            $('#needtimezone' + i).val(event_dates['needtimezone' + i]);
+                            $('#timezone' + i).val(event_dates['timezone' + i]);
                         }
                     }
 
