--- a/tinker/templates/creative_tim_sidebar.html
+++ b/tinker/templates/creative_tim_sidebar.html
@@ -3,7 +3,7 @@
     <div id="sidebar" class="sidebar-wrapper">
         <div class="logo">
             <a href="/" class="simple-text">
-                Tinker
+                <img src="/static/assets/img/tinker_logo.png" style="height:35px">
             </a>
         </div>
         <ul class="nav">
